<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:id="@+id/layout_background"
        tools:context=".presentation.ui.search.SearchRepositoryActivity">

        <com.google.android.material.appbar.AppBarLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.Toolbar
                android:background="@drawable/bg_main"
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                >
                <TextView
                    android:textSize="16sp"
                    android:text="@string/title_search"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:startIconDrawable="@drawable/ic_search"
            app:endIconDrawable="@drawable/ic_cancel"
            app:endIconMode="clear_text"
            app:startIconTint="@color/white"
            app:endIconTint="@color/white"
            app:boxStrokeColor="@color/blue_448CF6"
            app:boxBackgroundColor="@color/navy_1B2840"
            app:helperTextEnabled="false"
            app:errorEnabled="false"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="24dp"
            android:id="@+id/tl_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:inputType="text"
                android:textColorHint="@color/grey_74869B"
                android:hint="@string/hint_search"
                android:textColor="@color/white"
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/tl_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            />

        <LinearLayout
            app:layout_constraintTop_toTopOf="@id/rv_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:id="@+id/layout_empty_response"
            android:paddingHorizontal="100dp"
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/title_empty_response"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/content_empty_response"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>


        <ProgressBar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>