<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.main.MainActivity"
        android:background="@drawable/bg_main"
        >

        <!-- header -->
        <com.google.android.material.appbar.AppBarLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.appcompat.widget.Toolbar
                app:layout_constraintStart_toStartOf="@+id/app_bar_layout"
                app:layout_constraintEnd_toEndOf="@+id/appBarLayout"
                app:layout_constraintTop_toTopOf="@+id/appBarLayout"

                android:background="@drawable/bg_main"
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="20dp"
                    android:paddingStart="0dp"
                    >

                    <TextView
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"

                        android:text="@string/tool_bar_title"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <ImageView
                        app:layout_constraintEnd_toStartOf="@id/card_view"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"

                        android:padding="5dp"
                        android:src="@drawable/ic_selector_search"
                        android:id="@+id/iv_search"
                        android:layout_marginEnd="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <androidx.cardview.widget.CardView
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"

                        android:layout_gravity="end"
                        android:id="@+id/card_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shape="ring"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="0dp"
                        >
                        <ImageView
                            android:src="@drawable/ic_person_circle"
                            android:id="@+id/iv_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            app:layout_constraintEnd_toStartOf="@id/btn_tab_2"

            android:text="@string/title_issue"
            android:textColor="@color/color_text_selector_main_tab"
            android:background="@drawable/btn_main_tab_selector"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:id="@+id/btn_tab_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_tab_1"
            app:layout_constraintStart_toEndOf="@id/btn_tab_1"

            android:text="@string/title_notifications"
            android:textColor="@color/color_text_selector_main_tab"
            android:background="@drawable/btn_main_tab_selector"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:id="@+id/btn_tab_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />

        <androidx.fragment.app.FragmentContainerView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_tab_1"

            android:id="@+id/container_fragment_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>